# gcp-vector-rag-patterns

./: .gitignore  README.md  main.py  pyproject.toml
app/search_index/: main.py
app/upsert_index/: main.py
gcp/: compute.tf  iam.tf  infra.tf  variables.tf
