[project]
name = "gcp-vector-rag-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "functions-framework>=3.10.1",
    "google-cloud-storage>=3.10.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-google-vertexai>=3.2.3",
    "langchain-openai>=1.2.1",
    "pypdf>=6.11.0",
]
